# FastAPI-template

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile_prod  README.md  alembic.ini  docker-compose.yml  gunicorn_conf.py  log.ini  pyproject.toml  start.sh
app/: config.py  main.py
app/admin/: models.py
app/db/: session.py
app/jobs/: celery_app.py  tasks.py
app/module/: dependecies.py  router.py  service.py
app/module/crud/: base_crud.py  user_crud.py
app/module/models/: user.py
migrations/: README  env.py
migrations/versions/: 89b66b29578c_init.py
tests/api/: test_module.py
