[tool.poetry]
name = "app"
version = "0.1.0"
description = "Service for Flagstudio Jira"
authors = ["Daniil Maltsev <malcev_daniil@flagstudio.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
alembic = "^1.9.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python-multipart = "^0.0.5"
itsdangerous = "^2.1.2"
httpx = "^0.23.3"
sqladmin = "^0.8.0"
celery = "^5.2.7"
redis = "^4.4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
black = "^22.12.0"
httpx = "^0.23.3"
isort = "^5.11.4"
autoflake = "^2.0.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"